# viewroyal

./: .continue-here.md  .gitignore  CLAUDE.md  LICENSE  PLAN-multi-town-ingestion.md  README.md  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apps/pipeline/: .gitignore  README.md  com.viewroyal.pipeline.plist  main.py  pyproject.toml  pytest.ini
apps/pipeline/pipeline/: alignment.py  civicweb.py  config.py  embeddings.py  lockfile.py  logging_config.py  markdown_generator.py  marker_parser.py  names.py  notifier.py  orchestrator.py  parser.py  paths.py  update_detector.py  utils.py
apps/pipeline/pipeline/diarization/: __init__.py  audio.py  diarization_types.py  inference.py  resnet_embedding.py
apps/pipeline/pipeline/ingestion/: ai_refiner.py  audit.py  batch_extractor.py  bylaws.py  document_chunker.py  document_extractor.py  embed.py  gemini_extractor.py  image_extractor.py  ingester.py  matter_matching.py  process_agenda.py  process_bylaws.py
apps/pipeline/pipeline/profiling/: key_vote_detector.py  profile_agent.py  stance_generator.py  topic_classifier.py
apps/pipeline/pipeline/scrapers/: __init__.py  base.py  bylaws.py  civicweb.py  legistar.py  static_html.py
apps/pipeline/pipeline/video/: __init__.py  vimeo.py
apps/pipeline/scripts/: backfill_image_sections.py  cleanup_r2_orphans.py  run-pipeline.sh
apps/pipeline/scripts/analysis/: check_votes.py
apps/pipeline/scripts/archive/: canonicalize_archive.py  fix_misplaced_council_meetings.py
apps/pipeline/scripts/audit/: run_audit.py  (+1 more)
apps/pipeline/tests/: conftest.py
(+765 files in other folders)
